--- a/help.html
+++ b/help.html
@@ -62,39 +62,41 @@
                     <li>In pairs answer the following questions:
                         <ol>
                             <li>
-                                What does line 14 in script.js do?                                
+                                What does line 17 in script.js do?                                
                             </li>
                             <li>
-                                What would line 66 in sprite.js do?
+                                What would line 95 in sprite.js do?
                             </li>
                             <li>
-                                What file and line does the code to update the fps count start?
+                                What file and line does the code to update the fps count start? (you'll need to explore the code)
                             </li>
                             <li>
-                                What file and line does the code to check collisions start?
+                                What file and line does the code to check collisions between the sprites and the containing box start?
                             </li>
                             <li>
-                                How would you change the border color of the box to blue?
+                                How would you change the border color of the outer box containing the sprites to blue?
                             </li>                                              
                         </ol>
                     </li>
-                    <li>Can you get the animation to go a different direction? Discuss the changes you made.</li>                    
+                    <li>Can you get the sprite animation to start in a different direction? Discuss the changes you made.</li>                    
                 </ol>
             </section>
             <section>
                 <h2>The main challenge</h2>
                 <p>Make the sprite bounce off the sides of the window.</p>
                 <ol>
-                    <li>Planning is the way to succeed. First solve the problem on paper, in pairs:
-                        <ul>
-                            <li>How do you get the X, Y coordinates of the sprite?</li>
-                            <li>How do you get the dimensions of the window?</li>
-                            <li>What is the condition that needs to be met to change the direction of the sprite?</li>
-                            <li>How can you write this condition in code?</li>
-                        </ul>
+                    <li><p>Planning is the way to succeed. First solve the problem in a simplified form, and you can discuss in pairs to help each other.</p> 
+                        <p>You'll start by making a flow chart. Open a new tab in your browser and go to <a rel="noopener" target="_blank" href="https://draw.io">https://draw.io</a> (or click this link)</p>
+                        <p>Then open the spritecollission.svg file. Read it and then finish the flow chart.</p>
+                        <ol>
+                            <li>You will use this flowchart to help you fix the JS code! <b>Now make sure you read the comments in the code...</b>
+                            </li>
+                            <li>How do you get the X, Y coordinates of the sprite bounding box?</li>
+                            <li>How do you get the sprite direction?</li>
+                            <li>What is the <b>condition</b> that needs to be met to change the direction of the sprite?</li>
+                            <li>Study the code and fix it so the sprite bounces from all sides of the box!</li>
+                        </ol>
                     </li>
-                    <li>Next, implement your solution in javascript. Write and test your solution, bit by bit.</li>
-                    <li>What might be the problem with writing and testing it all at once?</li>
                     <li>Evaluate your solution. What works well, what could be improved? Do yu have all the information you need to make those improvements?</li>                    
                 </ol>
             </section>
