--- a/help.html
+++ b/help.html
@@ -83,7 +83,7 @@
             </section>
             <section>
                 <h2>The main challenge</h2>
-                <p>Make the sprite bounce off the sides of the window.</p>
+                <p>Make the sprite bounce off all the sides of the box.</p>
                 <ol>
                     <li><p>Planning is the way to succeed. First solve the problem in a simplified form, and you can discuss in pairs to help each other.</p> 
                         <p>You'll start by making a flow chart. Open a new tab in your browser and go to <a rel="noopener" target="_blank" href="https://draw.io">https://draw.io</a> (or click this link)</p>
@@ -97,10 +97,11 @@
                             <li>Study the code and fix it so the sprite bounces from all sides of the box!</li>
                         </ol>
                     </li>
-                    <li>Evaluate your solution. What works well, what could be improved? Do yu have all the information you need to make those improvements?</li>                    
+                    <li>Evaluate your solution. What works well, what could be improved? Do you have all the information you need to make those improvements?</li>                    
                 </ol>
             </section>
             <section>
+                <br>
                 <h2>Cheatsheet</h2>
                 <p>Here are some code blocks to help piece together the solution</p>
                 <table>
