--- a/help.html
+++ b/help.html
@@ -55,7 +55,7 @@
         <article>
             <section>
                 <h2>Getting started</h2>
-                <p>work in pairs and make sure you swap who is doing the coding from time to time.</p>
+                <p>Discuss the code and what you're doing with a partner. (10 mins)</p>
                 <ol>
                     <li>Explore the existing code. The HTML, Javascript and the CSS. Can you guess what each part does?</li>
                     <li>Test your predictions. Try modifying a small bit of code and then testing what it does. Make the change, save the file and then reload the page in the browser. (Remember you can undo changes with Ctrl-Z)</li>
@@ -83,7 +83,7 @@
             </section>
             <section>
                 <h2>The main challenge</h2>
-                <p>Make the sprite bounce off all the sides of the box.</p>
+                <p>Make the sprite bounce off all the sides of the box. (60 mins)</p>
                 <ol>
                     <li><p>Planning is the way to succeed. First solve the problem in a simplified form, and you can discuss in pairs to help each other.</p> 
                         <p>You'll start by making a flow chart. Open a new tab in your browser and go to <a rel="noopener" target="_blank" href="https://draw.io">https://draw.io</a> (or click this link)</p>
